--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,7 @@ body {
 
 /* Logo */
 		.logo {
-		 margin-left: 80px;
-		 margin-top: 30px;
+		 margin: 80px 0 30px 80px;
 		 width: 100px;
 		 height: 100px;
 		}
@@ -28,9 +27,9 @@ body {
 /* Headline */
 		h1 {
 			font-family: Merriweather Sans, Arial, sans-serif;
-			margin-top: 50px;
+			margin-top: 100px;
 			float:right;
-			width: 810px;
+			width: 800px;
 			text-align: center;
 
 		}
@@ -43,7 +42,7 @@ body {
 		}
 
 		dl.tabs {
-			margin: 30px 10px 10px 10px;
+			margin: 30px 70px 10px 70px;
 		}
 
 		.tabs dd {
@@ -56,7 +55,7 @@ body {
 
 /* Tab Content */
 		.content.active p {
-			margin: 30px 10px 30px 43.5px;
+			margin: 30px 82px 30px 82px;
 			font-family: Merriweather Sans, Arial, sans-serif;
 			height: 50px;
 		}
