--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,21 @@ body {
 
 		}
 
+/* Orbit Slider */
+		div.orbit-container {
+			vertical-align: middle;
+		}
+		.orbit-container .orbit-slides-container {
+			height: 200px;
+			width: 840px;
+			padding-left: 80px;
+		}
+
+		ul.orbit-slides-container.slide.swipe-next {
+			width: 920px;
+			height: 200px;
+		}
+
 /* Accordian Margins */
 		.accordion {
 			margin: 0 80px 80px 80px;
@@ -72,3 +87,4 @@ body {
 		.content.active p {
 			font-family: Merriweather Sans, Arial, sans-serif;
 		}
+
